<resources>
    <string name="app_name">BusStationClient</string>
    <string name="bus_station">Bus station</string>
    <string name="log_in_to_your_account">Log in to your account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="or_create_an_account">or create an account</string>
    <string name="create_new_account">Create new account</string>
    <string name="create">Create</string>
    <string name="or_log_in">Or log in to your account</string>
    <string name="surname">Surname</string>
    <string name="name">Name</string>
    <string name="unable_to_log_in_check_your_email_and_password">Unable to log in. Check your email and password</string>
    <string name="error_email_is_busy">Error: the account with this email already exists</string>
    <string name="error_name_validation">Error: name can contain only A-Za-z symbols</string>
    <string name="error_surname_validation">Error: surname can contain only A-Za-z symbols</string>
    <string name="error_email_validation">Error: invalid email format</string>
    <string name="error_password_validation"><![CDATA[Error: password must be >8 symbols and contain a-z symbols]]></string>
    <string name="error_unable_to_register">Unable to register. Try again later</string>
    <string name="shop">Buy tickets</string>
    <string name="stations">Stations</string>
    <string name="my_tickets">My tickets</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="from_station">From station:</string>
    <string name="to_station">To station:</string>
    <string name="date">Date:</string>
    <string name="filter_by">Filter by:</string>
    <string name="from">FROM:</string>
    <string name="to">TO:</string>
    <string name="voyages_are_not_found_try_changing_stations_or_date">Voyages are not found. Try changing stations or date.</string>
    <string name="buy">BUY</string>
    <string name="session_timeout">Session timeout</string>
    <string name="you_need_to_log_in_again">You need to log in again</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="check_internet_connection">Check your Internet connection</string>
    <string name="try_again">Try again</string>
    <string name="token_expired_error">Token expiration error</string>
    <string name="no_internet_error">No Internet error</string>
    <string name="choose_station">Choose station:</string>
    <string name="confirm">Confirm</string>
    <string name="has_station_building">Has station building</string>
    <string name="has_station_restroom">WC on the station</string>
    <string name="has_station_caffe">There is caffe on the station</string>
    <string name="has_station_town">The station is in town</string>
</resources>