<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/fragment_login">

    <fragment
        android:id="@+id/fragment_login"
        android:name="com.terabyte.busstationclient.ui.fragment.LoginFragment"
        android:label="Log in">
        <action
            android:id="@+id/action_from_login_to_register"
            app:destination="@id/fragment_register"
            app:popUpTo="@id/fragment_login"
            app:popUpToInclusive="true"/>
        <action
            android:id="@+id/action_from_login_to_shop"
            app:destination="@id/fragment_shop"
            app:popUpTo="@id/fragment_login"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/fragment_register"
        android:name="com.terabyte.busstationclient.ui.fragment.RegisterFragment"
        android:label="Register">
        <action
            android:id="@+id/action_from_register_to_login"
            app:destination="@id/fragment_login"
            app:popUpTo="@id/fragment_register"
            app:popUpToInclusive="true"/>
        <action
            android:id="@+id/action_from_register_to_shop"
            app:destination="@id/fragment_shop"
            app:popUpTo="@id/fragment_register"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/fragment_shop"
        android:name="com.terabyte.busstationclient.ui.fragment.ShopFragment"
        android:label="@string/shop">
    </fragment>

    <fragment
        android:id="@+id/fragment_my_tickets"
        android:name="com.terabyte.busstationclient.ui.fragment.MyTicketsFragment"
        android:label="@string/my_tickets">
    </fragment>

    <fragment
        android:id="@+id/fragment_stations"
        android:name="com.terabyte.busstationclient.ui.fragment.StationsFragment"
        android:label="@string/stations">
    </fragment>

    <fragment
        android:id="@+id/fragment_settings"
        android:name="com.terabyte.busstationclient.ui.fragment.SettingsFragment"
        android:label="@string/settings">
        <action
            android:id="@+id/action_from_settings_to_login"
            app:destination="@id/fragment_login"
            app:popUpTo="@id/fragment_settings"
            app:popUpToInclusive="true"/>
    </fragment>

</navigation>