<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="4dp"
    android:background="@drawable/background_voyage"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/text_station_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="18sp"
        tools:text="Irkutsk Autostation" />

    <TextView
        android:id="@+id/text_station_coordinates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:textSize="16sp"
        app:drawableLeftCompat="@drawable/ic_stations"
        tools:text="52.104 104.3402" />

    <TextView
        android:id="@+id/text_has_building"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:drawablePadding="4dp"
        android:text="@string/has_station_building"
        android:textSize="16sp"
        app:drawableLeftCompat="@drawable/ic_station_building" />

    <TextView
        android:id="@+id/text_has_restroom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:drawablePadding="4dp"
        android:text="@string/has_station_restroom"
        android:textSize="16sp"
        app:drawableLeftCompat="@drawable/ic_station_restroom" />

    <TextView
        android:id="@+id/text_has_caffe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:drawablePadding="4dp"
        android:text="@string/has_station_caffe"
        android:textSize="16sp"
        app:drawableLeftCompat="@drawable/ic_station_caffe" />

    <TextView
        android:id="@+id/text_has_town"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:drawablePadding="4dp"
        android:text="@string/has_station_town"
        android:textSize="16sp"
        app:drawableLeftCompat="@drawable/ic_station_town" />

</LinearLayout>